# jxa-mail-mcp

./: .gitignore  CLAUDE.md  README.md  TODO.md  glama.json  mkdocs.yml  pyproject.toml  server.json
.github/workflows/: docs.yml  lint.yml  release.yml
docs/: configuration.md  installation.md  search.md  tools.md
overrides/: main.html
src/apple_mail_mcp/: __init__.py  cli.py  config.py  server.py
src/apple_mail_mcp/index/: accounts.py  disk.py  manager.py  schema.py  search.py  sync.py  watcher.py
src/apple_mail_mcp/jxa/: mail_core.js
src/apple_mail_mcp_server/: __init__.py  server.py
src/jxa_mail_mcp/: __init__.py  builders.py  cli.py  config.py  executor.py  server.py
src/jxa_mail_mcp/index/: disk.py  manager.py  schema.py  search.py  sync.py  watcher.py
src/jxa_mail_mcp/jxa/: mail_core.js
tests/: __init__.py  conftest.py  test_accounts.py  test_builders.py  test_disk.py  test_executor.py  test_manager.py  test_schema.py  test_search.py  test_server.py  test_sync.py
