[project]
name = "apple-mail-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with Apple Mail via JXA scripts"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0b1,<4",
    "cyclopts>=5.0.0a1",
]

[project.scripts]
apple-mail-mcp = "apple_mail_mcp_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
target-version = "py313"
line-length = 80
src = ["src"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
    "W",
]

[tool.ruff.format]
docstring-code-format = true

